# Zrodlo

./: .env.example  .env.prod.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
apps/backend/: Dockerfile  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial_schema.py  0002_domain_model.py  0003_rozmowy.py  0004_skany.py  0005_multi_tenancy.py  0006_rodo_consent.py  0007_subskrypcje.py  0008_ai_koszty.py  0009_dziennik_kancleryjny.py
apps/backend/app/: config.py  database.py  dependencies.py  main.py
apps/backend/app/demo/: seeder.py
apps/backend/app/models/: __init__.py  ai_uzycie.py  audit.py  base.py  dokumenty.py  dziennik.py  grupy.py  intencje.py  kalendarz.py  ogloszenia.py  parafia.py  powiadomienia.py  rodo.py  rozmowa.py  skan.py  subskrypcja.py  uzytkownicy.py  wiedza.py  wspolnoty.py
apps/backend/app/routers/: ai.py  ai_koszty.py  archiwum.py  asystent.py  auth.py  demo.py  dokumenty.py  dziennik.py  grupy.py  health.py  homilia.py  intencje.py  kalendarz.py  komunikacja.py  ogloszenia.py  onboarding.py  parafia.py  powiadomienia.py  rodo.py  subskrypcja.py  (+5 more)
apps/backend/tests/: conftest.py  test_api_ai_koszty.py  test_api_auth.py  test_api_dokumenty.py  test_api_dziennik.py  test_api_intencje.py  test_api_kalendarz.py  test_api_onboarding.py  test_api_rodo.py  test_api_subskrypcja.py  test_multi_tenancy.py  test_services_ai_koszt.py  test_services_auth.py  test_services_permissions.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/worker/: config.py  main.py
(+102 files in other folders)
