[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zrodlo-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "alembic==1.13.3",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "redis[hiredis]==5.1.1",
    "qdrant-client==1.11.3",
    "minio==7.2.9",
    "httpx==0.27.2",
    "python-multipart==0.0.12",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "tenacity==9.0.0",
    "structlog==24.4.0",
    "openai>=1.50.0",
    "pymupdf>=1.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
