[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zrodlo-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "arq==0.26.1",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "redis[hiredis]==5.1.1",
    "qdrant-client==1.11.3",
    "minio==7.2.9",
    "httpx==0.27.2",
    "structlog==24.4.0",
    "openai>=1.50.0",
]

[tool.hatch.build.targets.wheel]
packages = ["worker"]
